バックエンドに認証機能とログアウト機能を追加